@@ -1,5 +1,5 @@
 AUX 92-pcsc-acsccid.rules 1798 SHA256 a6ba1e5c26d276e4389615bc33510d179dddf6316a6abb7c95b60ac6f6a2184f SHA512 ba4e60dda1eae218646a69646e7944d29476b09ffe19a35241c6d539b4141e05e6a54382f3ac0ae1cc513f37ac12175b73cdf2a29fd3a39217fea7f85018bb3a WHIRLPOOL b49d476fdafa5c47b1eb8cf7ab165511b5d50227b605c848e1f0a42646ae81f29fc764f5f9d37dd1587a16c47dd0ae25c4e4fe1e44c344ff7f267b6a1cc574a5
-DIST acsccid-1.1.1.tar.bz2 412491 SHA256 9dce72cd25a1d2229fb8eb539ca3eca02d6b222aefb3d14e8b58a6deaebc6913 SHA512 7d282191a96b78d75c7acf2500bf7fc9f65f387e5a99da11763e162aa5ad335a78b7ea6cbcbb234fc0c260390f32404c3cd6dffb2903c1b5909cecb152aed819 WHIRLPOOL 2ac58c3d86d19af540e9267f841b16d5aaacba3207667767dcc496580b664ce61c5b17da7aeb9f4891848137f53ab59786d199724b053b49951d4caced352cbc
-EBUILD acsccid-1.1.1.ebuild 687 SHA256 967de85aa2424495af7ebfa0eedf2781780423b0779041a0814576b26d69d7ea SHA512 e290b8158c950f4c25d354c081b5a8ee2c2d738c5251c2842fb88d3bbfe3ced34d301147242482dc3af0e8a635d9c3d14d63a510668b810ab00c2d25016c0b82 WHIRLPOOL d196a3a9dd88935b8cc235fb15ba1150cd3c6aaab4aef4b03c1afca566e3b8800a3ec736f8844879b8676866c8d85b849be822865606881ba12a23838015f224
-MISC ChangeLog 1261 SHA256 1848de2ac4faebaa3a08d3b3822e07dff0c546c8943097585c6458280a93577e SHA512 2a6b1c8f6ca74a9b3fe02438267275038cecf5cdeba93910431bc397e360afcd9e5f04918c3483e227fa19cb92669b60ff09432ca798ff01f1a23a7e05e4e35a WHIRLPOOL 91dd99b7905426324dc074d4747f842c836cce26f684202c3e107920e7a168c1870d000743726e3983722914cbf771fb0d9453b641f4434cf318711e955d0118
+DIST acsccid-1.1.2.tar.bz2 438206 SHA256 451c60400f6f4417f75892549283ab3a0301019a5ef2801abde3ab7580dae708 SHA512 65aa87cac52151f9166637ff98c317b3a61a658bc17b12b5d3422c51bec3a16816e9a42e85b18501c3e17a3a8016554ec3773114adc456adaba60fb2c7fc6127 WHIRLPOOL 5dbacecdaa8ca207e2dfd67d4664bbcb16b041ae857acaa6a58d3ec726617f2181cd61afbcbd036298fb1101da6f9a34bececf29cf4ae5933aa2b1f4a7049211
+EBUILD acsccid-1.1.2.ebuild 702 SHA256 11e03b6a07739d77894c6be553a03a3677fc6087651a5f9ddfd6b448d3f99d1f SHA512 fc7e4302c1a9a9015ecf19f3ef1f7ffe77fb56e0ba86cc514612d06a60cb547ef0494e07ffa2bb626d0881f20b8b5bd2a43701727816555c9a7e81b96946a17c WHIRLPOOL 8d8570c5b548ec63eb56296bd451af0503a08d77406e7ed528f3df3a7071e54a581228a2362079f48708ee3a0c8203ea3bf3fef16aeea9cac4b5333ef23d031a
+MISC ChangeLog 1399 SHA256 c6a8d52a270423b73fecaf2c379e3a6140973fd44b8ae7faedb6f05d58791d24 SHA512 239d08a7740f90894b51bea1f1787a229764ea6249ce97b052db78312e3f7b215082c3a7e693639a86d49d55f29d278a04fcbb8f9cee0f158340550465f581c6 WHIRLPOOL 31b605c0c6b1646a00a1433a8043a72e769c9bd3fce28ae9767b13a8f794fb2cff6fd65d2124809e7a223febc3d74684a17edac5110d0655ab6de8f04927078b
 MISC metadata.xml 249 SHA256 8faf6bfa799af515223653b56758777071c6b76d08fc5861db35293fc5aff0a0 SHA512 e46b5195f35d6c1d1a301830dd220010cd706b3c3f7eaf870410a5a1481d73e157e8d40eda3b3e9272c0b0d16ba201fc5f5e51ac4331e6430d83fe0f71b49346 WHIRLPOOL 3c59a9414e2dbeb4d078d190d7e8598f0bfa2df5bcfc598114c1ad50435ff1a8fc36832ceec7aaf91288574f3d8439de022921c3d6556c30a1ec7f9b3c6383e3
