@@ -1,10 +1,17 @@
 # ChangeLog for app-crypt/acsccid
-# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
+
+*acsccid-1.1.2 (23 Feb 2016)
+
+  23 Feb 2016; Vincent Hardy <vincent.hardy.be@gmail.com>
+  +acsccid-1.1.2.ebuild:
+  EAPI=6
+  Version bump
 
 *acsccid-1.1.1 (10 nov 2015)
 
-  10 nov 2015; Vincent Hardy <vincent.hardy.be@gmail.com>
+  10 Nov 2015; Vincent Hardy <vincent.hardy.be@gmail.com>
   +acsccid-1.1.1.ebuild:
   Version bump
 
